--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,8 @@
 <body>
     <canvas class="webgl"></canvas>
     <script type="module" src="./script.js"></script>
-    <script type="module" src="./novel.js" id='VisualNovelEngine'></script>
-    <!-- <script type="text/javascript" src="./novel.js" id='VisualNovelEngine'></script> -->
-    <button id="scene1">scene1</button>
-    <button id="scene2">scene2</button>
+    <script type="module" src="./novel.js"></script>
+    <div id="VisualNovelEngine"></div>
+
 </body>
 </html>
