added loading screen

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <canvas class="webgl"></canvas>
+    <section id="loading-screen">
+
+        <div id="loader"></div>
+    
+    </section>
     <script type="module" src="./script.js"></script>
+    <script type="module" src="./loader.js"></script>
     <script type="module" src="./novel.js"></script>
     <div id="VisualNovelEngine"></div>
 
