City Scene Added

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,17 @@
     <script type="module" src="./script.js"></script>
     <script type="module" src="./loader.js"></script>
     <script type="module" src="./novel.js"></script>
-    <div id="VisualNovelEngine"></div>
+    <div id="VisualNovelEngine">
+        <div id='mainbox'>
+			<div id='namebox'>
+					<span>Loading...</span>
+			</div>
+			<div id='textbox'>
+				<p>Loading...</p>
+				<div id='optionsbox'></div>
+			</div>
+		</div>
+    </div>
 
 </body>
 </html>
