--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Labor in Question</title>
+        <title>Mistakes and Memories</title>
         <style>
             * {
   margin: 0;
